--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -29,6 +29,37 @@
             </div>
         </header>
 
+        <main>
+            <section class="section-about">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        Exciting tours for adventours people
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="heading-tertiary u-margin-bottom-small">You're falling in love with nature</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat nam sit deleniti perferendis dicta sequi atque repellat quaerat velit, voluptates quae veritatis laboriosam incidunt voluptatem? Minus, quaerat rerum? Nisi, fuga?
+                        </p>
+                        <h3 class="heading-tertiary u-margin-bottom-small">You're falling in love with nature</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum ad corporis sed quam non unde ratione vero! Excepturi, eveniet?
+                        </p>
+
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
+                    </div>
+                    <div class="col-1-of-2">
+                        <div class="composition">
+                            <img src="img/nat-1.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                            <img src="img/nat-2.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                            <img src="img/nat-3.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+
         <!-- grid system
         <section class="grid-test">
             <div class="row">
